--- a/src/main/resources/templates/service-contracts/list.html
+++ b/src/main/resources/templates/service-contracts/list.html
@@ -3,12 +3,13 @@
       xmlns:th="http://www.thymeleaf.org"
 >
 <head>
-    <meta charset="UTF-8"/>
+    <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1"/>
     <title th:text="#{all.owners}">Title</title>
     <th:block th:replace="template :: css"></th:block>
 </head>
 <body>
-<table id="owners" class="table table-striped dataTable">
+<div th:replace="template :: header"/>
+<table id="owners" class="table table-striped dataTable" th:attr="data-button-href='/service-contracts/0?buildingId='+${id},data-button-name=#{register.service.contract},data-button-visible=${id}">
     <thead>
     <tr>
         <td th:text="#{service.company.name}">ID</td>
