--- a/src/main/resources/templates/tenants/form.html
+++ b/src/main/resources/templates/tenants/form.html
@@ -2,22 +2,23 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org"
 >
-<!--/*@thymesVar id="object" type="com.proskurnia.VOs.PersonVO"*/-->
+<!--/*@thymesVar id="personVO" type="com.proskurnia.VOs.PersonVO"*/-->
 <head>
-    <meta charset="UTF-8"/>
-    <title th:text="${object.name}?:#{new.tenant}">Title</title>
+    <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1"/>
+    <title th:text="${personVO.name}?:#{new.tenant}">Title</title>
     <th:block th:replace="template :: css"></th:block>
 </head>
 <body>
-<form th:object="${object}" th:action="@{save}" action="#" method="post">
+<div th:replace="template :: header"/>
+<form th:object="${personVO}" th:action="@{save}" action="#" method="post">
     <div class="container">
         <input type="hidden" th:field="*{id}"/>
         <input class="hidden" type="checkbox" th:field="*{isOwner}"/>
-        <div class="form-group">
+        <div class="form-group col-sm-6">
             <label for="passport" th:text="#{person.id}"></label>
             <input class="form-control" id="passport" th:field="*{passport}"/>
         </div>
-        <div class="form-group">
+        <div class="form-group col-sm-6">
             <label for="title" th:text="#{person.title}"></label>
             <select data-live-search="true" class="form-control selectpicker" id="title" th:field="*{titleId}">
                 <th:block th:each="title : ${titles}">
@@ -25,32 +26,32 @@
                 </th:block>
             </select>
         </div>
-        <div class="form-group">
+        <div class="form-group col-sm-6">
             <label for="name" th:text="#{person.name}"></label>
             <div class="alert-danger" th:if="${#fields.hasErrors('name')}" th:errors="*{name}">Name Error</div>
             <input class="form-control" id="name" th:field="*{name}"/>
         </div>
-        <div class="form-group">
+        <div class="form-group col-sm-6">
             <label for="caf" th:text="#{person.CAF}"></label>
             <input class="form-control" id="caf" th:field="*{caf}"/>
         </div>
-        <div class="form-group">
+        <div class="form-group col-sm-6">
             <label for="address" th:text="#{address}"></label>
             <input class="form-control" id="address" th:field="*{address}"/>
         </div>
-        <div class="form-group">
+        <div class="form-group col-sm-6">
             <label for="phone1" th:text="#{phone} + ' 1'"></label>
             <input class="form-control" id="phone1" th:field="*{phone1}"/>
         </div>
-        <div class="form-group">
+        <div class="form-group col-sm-6">
             <label for="phone2" th:text="#{phone} + ' 2'"></label>
             <input class="form-control" id="phone2" th:field="*{phone2}"/>
         </div>
-        <div class="form-group">
+        <div class="form-group col-sm-6">
             <label for="email1" th:text="#{email} + ' 1'"></label>
             <input class="form-control" id="email1" th:field="*{email1}"/>
         </div>
-        <div class="form-group">
+        <div class="form-group col-sm-6">
             <label for="email2" th:text="#{email} + ' 2'"></label>
             <input class="form-control" id="email2" th:field="*{email2}"/>
         </div>
@@ -58,10 +59,12 @@
         <div th:if="${#fields.hasGlobalErrors()}" th:each="error : ${#fields.globalErrors()}">
             <div class="alert alert-danger" th:text="${error}"></div>
         </div>
-        <div>
-            <a th:href="'/renting-contracts?tenantId='+${object.id}" class="btn btn-primary" th:text="#{renting.contract}"></a>
-            <a th:href="'/accounts?ownerId='+${object.id}" class="btn btn-primary" th:text="#{bank.accounts}"></a>
-            <button type="submit" class="pull-right btn btn-primary" th:text="#{save}">Save</button>
+        <div class="footer">
+            <th:block th:each="contract : ${contracts}">
+                <a th:href="'/renting-contracts/'+${contract.id}" class="btn btn-primary" th:text="${contract.address}+', '+${contract.roomNumber}"></a>
+            </th:block>
+            <a th:href="'/renting-contracts/0?tenantId='+${personVO.id}+'&amp;tenantName='+${personVO.name}" class="btn btn-primary" th:text="#{new.renting.contract}"></a>
+            <button type="submit" class="pull-right btn btn-success" th:text="#{save}">Save</button>
         </div>
     </div>
 </form>
