--- a/src/main/resources/templates/banks/form.html
+++ b/src/main/resources/templates/banks/form.html
@@ -1,32 +1,31 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:th="http://www.thymeleaf.org"
->
-<!--/*@thymesVar id="personVO" type="com.proskurnia.VOs.PersonVO"*/-->
+      xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8"/>
-    <title th:text="${personVO.name == null} ? #{new.owner} : ${personVO.name}">Title</title>
+    <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1"/>
+    <title th:text="${bankVO.name == null} ? #{register.bank} : ${bankVO.name}">Title</title>
     <th:block th:replace="template :: css"></th:block>
 </head>
 <body>
-<!--/*@thymesVar id="object" type="com.proskurnia.VOs.BankVO"*/-->
-<form th:object="${object}" th:action="@{save}" action="#" method="post">
+<div th:replace="template :: header"/>
+<!--/*@thymesVar id="bankVO" type="com.proskurnia.VOs.bankVO"*/-->
+<form th:object="${bankVO}" th:action="@{save}" action="#" method="post">
     <div class="container">
         <input type="hidden" th:field="*{id}"/>
-        <div class="form-group">
+        <div class="form-group col-sm-6">
             <label th:text="#{bank}"></label>
             <div class="alert-danger" th:if="${#fields.hasErrors('name')}" th:errors="*{name}">Name Error</div>
             <input class="form-control" th:field="*{name}"/>
         </div>
-        <div class="form-group">
+        <div class="form-group col-sm-6">
             <label th:text="#{address}"></label>
             <input class="form-control" th:field="*{address}"/>
         </div>
-        <div class="form-group">
+        <div class="form-group col-sm-6">
             <label th:text="#{phone}"></label>
             <input class="form-control" th:field="*{phone}"/>
         </div>
-        <div class="form-group">
+        <div class="form-group col-sm-6">
             <label th:text="#{email}"></label>
             <input class="form-control" th:field="*{email}"/>
         </div>
@@ -34,8 +33,8 @@
         <div th:if="${#fields.hasGlobalErrors()}" th:each="error : ${#fields.globalErrors()}">
             <div class="alert alert-danger" th:text="${error}"></div>
         </div>
-        <div class="pull-right">
-            <button type="submit" class="btn btn-primary" th:text="#{save}">Save</button>
+        <div class="footer">
+            <button type="submit" class="pull-right btn btn-success" th:text="#{save}">Save</button>
         </div>
     </div>
 </form>
