--- a/src/main/resources/templates/buildings/form.html
+++ b/src/main/resources/templates/buildings/form.html
@@ -3,50 +3,59 @@
       xmlns:th="http://www.thymeleaf.org"
 >
 <head>
-    <meta charset="UTF-8"/>
-    <title th:text="${object.address}?:#{register.building}">Title</title>
+    <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1"/>
+    <title th:text="${buildingVO.address}?:#{register.building}">Title</title>
     <th:block th:replace="template :: css"></th:block>
 </head>
 <body>
-<!--/*@thymesVar id="object" type="com.proskurnia.VOs.BuildingVO"*/-->
-<form th:object="${object}" th:action="@{save}" action="#" method="post">
+<div th:replace="template :: header"/>
+<!--/*@thymesVar id="buildingVO" type="com.proskurnia.VOs.BuildingVO"*/-->
+<form th:object="${buildingVO}" th:action="@{save}" action="#" method="post">
     <div class="container">
         <input type="hidden" th:field="*{id}"/>
-        <input type="hidden" th:field="*{ownerAccountId}"/>
-        <div class="form-group">
+        <input type="hidden" th:field="*{ownerId}"/>
+        <div class="form-group col-sm-6">
             <label th:text="#{address}"></label>
             <div class="alert-danger" th:errors="*{address}">Address Error</div>
             <input class="form-control" th:field="*{address}"/>
         </div>
-        <div class="form-group">
+        <div class="form-group col-sm-6">
             <label th:text="#{owner}"></label>
             <input class="form-control" th:field="*{ownerName}" th:readonly="true"/>
         </div>
-        <div class="form-group">
-            <label th:text="#{comment}"></label>
-            <textarea class="form-control" id="comment" th:field="*{comment}"/>
+        <div class="form-group col-sm-6">
+            <label th:text="#{bank.account.number}"></label>
+            <select data-live-search="true" class="form-control selectpicker" th:field="*{ownerAccountId}">
+                <th:block th:each="account : ${accounts}">
+                    <option th:value="${account.id}" th:text="${account.id}"></option>
+                </th:block>
+            </select>
         </div>
-        <div class="form-group">
+        <div class="form-group col-sm-6">
             <label th:text="#{acquisition.date}"></label>
             <input type="hidden" th:field="*{acquisitionDate}"/>
             <input class="datepicker form-control" data-alt-field="#acquisitionDate"/>
         </div>
-        <div class="form-group">
+        <div class="form-group col-sm-6">
             <label th:text="#{construction.date}"></label>
             <input type="hidden" th:field="*{constructionDate}"/>
             <input class="datepicker form-control" data-alt-field="#constructionDate"/>
         </div>
-        <div class="form-group">
+        <div class="form-group col-sm-6">
             <label th:text="#{date.of.sale}"></label>
             <input type="hidden" th:field="*{dateOfSale}"/>
             <input class="datepicker form-control" data-alt-field="#dateOfSale"/>
+        </div>
+        <div class="form-group col-sm-6">
+            <label th:text="#{comment}"></label>
+            <textarea class="form-control" id="comment" th:field="*{comment}"/>
         </div>
         <hr/>
         <div th:if="${#fields.hasGlobalErrors()}" th:each="error : ${#fields.globalErrors()}">
             <div class="alert alert-danger" th:text="${error}"></div>
         </div>
-        <div class="pull-right">
-            <button type="submit" class="btn btn-primary" th:text="#{save}">Save</button>
+        <div class="footer">
+            <button type="submit" class="pull-right btn btn-success" th:text="#{save}">Save</button>
         </div>
     </div>
 </form>
