--- a/src/main/resources/templates/owner-accounts/form.html
+++ b/src/main/resources/templates/owner-accounts/form.html
@@ -1,30 +1,31 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:th="http://www.thymeleaf.org"
->
-<!--/*@thymesVar id="object" type="com.proskurnia.VOs.OwnerAccountVO"*/-->
+      xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8"/>
-    <title th:text="${object.id}">Title</title>
+    <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1"/>
+    <title th:text="${ownerAccountVO.id}">Title</title>
     <th:block th:replace="template :: css"></th:block>
 </head>
 <body>
-<form th:object="${object}" th:action="@{save}" action="#" method="post">
+<div th:replace="template :: header"/>
+<!--/*@thymesVar id="ownerAccountVO" type="com.proskurnia.VOs.ownerAccountVO"*/-->
+<form th:object="${ownerAccountVO}" th:action="@{save}" action="#" method="post">
     <div class="container">
         <input type="hidden" th:field="*{ownerId}"/>
-        <input type="hidden" th:name="isNew" th:value="${empty object.id ? true : false}"/>
-        <div class="form-group">
+        <input type="hidden" th:name="isNew" th:value="${isNew}?:'false'"/>
+        <div class="form-group col-sm-6">
             <label for="number" th:text="#{bank.account.number}"></label>
-            <div class="alert-danger" th:if="${#fields.hasErrors('id')}" th:errors="*{id}">Id Error</div>
-            <input class="form-control" id="number" th:field="*{id}" th:readonly="${object.id == null}"/>
+            <div class="alert-danger" th:errors="*{id}">Id Error</div>
+            <input class="form-control" id="number" th:field="*{id}"/>
         </div>
-        <div class="form-group">
+        <div class="form-group col-sm-6">
             <label for="balance" th:text="#{account.balance}"></label>
-            <input class="form-control" id="balance" th:field="*{balance}" th:readonly="${object.id == null}">
+            <div class="alert-danger" th:errors="*{balance}">Id Error</div>
+            <input class="form-control" id="balance" th:field="*{balance}"/>
         </div>
-        <div class="form-group">
+        <div class="form-group col-sm-6">
             <label for="bank" th:text="#{person.name}"></label>
-            <select class="form-control" id="bank" th:field="*{bankId}" th:each="bank : ${banks}">
+            <select class="selectpicker form-control" data-live-search="true" id="bank" th:field="*{bankId}" th:each="bank : ${banks}">
                 <option th:value="${bank.id}" th:text="${bank.name}"></option>
             </select>
         </div>
@@ -32,8 +33,8 @@
         <div th:each="error : ${#fields.globalErrors()}">
             <div class="alert alert-danger" th:text="${error}"></div>
         </div>
-        <div class="pull-right">
-            <button type="submit" class="btn btn-primary" th:text="#{save}">Save</button>
+        <div class="footer">
+            <button th:if="${isNew}" type="submit" class="pull-right btn btn-success" th:text="#{save}">Save</button>
         </div>
     </div>
 </form>
