--- a/src/main/resources/templates/payments/list.html
+++ b/src/main/resources/templates/payments/list.html
@@ -5,28 +5,29 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
     <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1"/>
-    <title th:text="#{banks}">Title</title>
+    <title th:text="#{buildings}">Title</title>
     <th:block th:replace="template :: css"></th:block>
 </head>
 <body>
 <div th:replace="template :: header"/>
-<table id="owners" class="table table-striped dataTable"
-       th:attr="data-button-href='banks/0',data-button-name=#{register.bank},data-button-visible='true'">
+<table class="table table-striped dataTable">
     <thead>
     <tr>
-        <td th:text="#{bank}">ID</td>
         <td th:text="#{address}"></td>
-        <td th:text="#{phone}"></td>
-        <td th:text="#{email}"></td>
+        <td th:text="#{description}"></td>
+        <td th:text="#{date}"></td>
+        <td th:text="#{amount}"></td>
+        <td th:text="#{comment}"></td>
     </tr>
     </thead>
-    <!--/*@thymesVar id="object" type="com.proskurnia.VOs.BankVO"*/-->
+    <!--/*@thymesVar id="object" type="com.proskurnia.VOs.Payment"*/-->
     <tbody th:each="object : ${list}">
     <tr>
-        <td th:text="${object.name}"></td>
-        <td th:text="${object.address}"></td>
-        <td th:text="${object.phone}"></td>
-        <td th:text="${object.email}"></td>
+        <td th:text="${object.buildingAddress}"></td>
+        <td th:text="${object.description}"></td>
+        <td th:text="${object.date}"></td>
+        <td th:text="${object.amount}"></td>
+        <td th:text="${object.comment}"></td>
     </tr>
     </tbody>
 </table>
