--- a/src/main/resources/templates/template.html
+++ b/src/main/resources/templates/template.html
@@ -16,6 +16,14 @@
     </th:block>
 </head>
 <body>
+<div class="header" th:fragment="header">
+    <a class="btn btn-default" href="/buildings" th:text="#{buildings}"/>
+    <a class="btn btn-default" href="/owners" th:text="#{owners}"/>
+    <a class="btn btn-default" href="/tenants" th:text="#{tenants}"/>
+    <a class="btn btn-default" href="/service-companies" th:text="#{service.companies}"/>
+    <a class="btn btn-default" href="/banks" th:text="#{banks}"/>
+    <a class="btn btn-default" href="/settings" th:text="#{application.settings}"/>
+</div>
 <th:block th:fragment="js">
     <script src="/resources/js/jquery-3.2.0.min.js" th:src="@{/js/jquery-3.2.0.min.js}"></script>
     <script src="/resources/js/datatables.min.js" th:src="@{/js/datatables.min.js}"></script>
